@@ -116,4 +116,8 @@ QT += xml
 # QT5 support
 !lessThan(QT_MAJOR_VERSION, 5) {
 	QT += widgets
+	unix {
+		DEFINES += CONFIG_XUNIQUE
+		QT += x11extras
+	}
 }
